# tetris

./: README.md  Tetris.hs  my-project.cabal
app/: Main.hs
client/: Main.hs
server/: Main.hs
src/: Tetris.hs
src/Tetris/: Colliding.hs  Drawing.hs  Generating.hs  Handling.hs  Types.hs  Updating.hs
tetris/: README.md
tetris/src/: Tetris.hs
